// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`response merging should filter out 2 identical responses if geocodeEarth response is a bus stop 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`response merging should merge 2 real responses correctly 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238459,
          47.880281,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.254,
        "gid": "transit:stops:2038::commtrans::stops",
        "id": "2038::commtrans::stops",
        "label": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "source": "transit",
        "source_id": "2038::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238637,
          47.879915,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.214,
        "gid": "transit:stops:2104::commtrans::stops",
        "id": "2104::commtrans::stops",
        "label": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "source": "transit",
        "source_id": "2104::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.23857,
          47.87967,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.186,
        "gid": "transit:stops:2105::commtrans::stops",
        "id": "2105::commtrans::stops",
        "label": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "source": "transit",
        "source_id": "2105::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`response merging should merge 2 real responses correctly 2`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238459,
          47.880281,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.254,
        "gid": "transit:stops:2038::commtrans::stops",
        "id": "2038::commtrans::stops",
        "label": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "source": "transit",
        "source_id": "2038::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238637,
          47.879915,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.214,
        "gid": "transit:stops:2104::commtrans::stops",
        "id": "2104::commtrans::stops",
        "label": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "source": "transit",
        "source_id": "2104::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.23857,
          47.87967,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.186,
        "gid": "transit:stops:2105::commtrans::stops",
        "id": "2105::commtrans::stops",
        "label": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "source": "transit",
        "source_id": "2105::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`response merging should not filter out 2 identical responses if geocodeEarth response is not a bus stop 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "addendum": Object {
          "osm": Object {
            "operator": "New York City Transit Authority",
            "wheelchair": "yes",
          },
        },
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`response merging should sort results depending on focus point 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238459,
          47.880281,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.254,
        "gid": "transit:stops:2038::commtrans::stops",
        "id": "2038::commtrans::stops",
        "label": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "source": "transit",
        "source_id": "2038::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238637,
          47.879915,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.214,
        "gid": "transit:stops:2104::commtrans::stops",
        "id": "2104::commtrans::stops",
        "label": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "source": "transit",
        "source_id": "2104::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.23857,
          47.87967,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.186,
        "gid": "transit:stops:2105::commtrans::stops",
        "id": "2105::commtrans::stops",
        "label": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "source": "transit",
        "source_id": "2105::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`response merging should sort results depending on focus point 2`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.23857,
          47.87967,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.186,
        "gid": "transit:stops:2105::commtrans::stops",
        "id": "2105::commtrans::stops",
        "label": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 3 (commtrans Stop ID 2105)",
        "source": "transit",
        "source_id": "2105::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238637,
          47.879915,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.214,
        "gid": "transit:stops:2104::commtrans::stops",
        "id": "2104::commtrans::stops",
        "label": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride Bay 2 (commtrans Stop ID 2104)",
        "source": "transit",
        "source_id": "2104::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.238459,
          47.880281,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "distance": 1174.254,
        "gid": "transit:stops:2038::commtrans::stops",
        "id": "2038::commtrans::stops",
        "label": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "layer": "stops",
        "match_type": "exact",
        "name": "Mariner Park & Ride (commtrans Stop ID 2038)",
        "source": "transit",
        "source_id": "2038::commtrans::stops",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.43634,
          37.793899,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "San Francisco County",
        "county_a": "SF",
        "county_gid": "whosonfirst:county:102087579",
        "gid": "openaddresses:address:us/ca/san_francisco:e8cd038c05c513c8",
        "housenumber": "2640",
        "id": "us/ca/san_francisco:e8cd038c05c513c8",
        "label": "2640 Steiner St, San Francisco, CA, USA",
        "layer": "address",
        "locality": "San Francisco",
        "locality_a": "SF",
        "locality_gid": "whosonfirst:locality:85922583",
        "match_type": "exact",
        "name": "2640 Steiner St",
        "neighbourhood": "Pacific Heights",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865909",
        "postalcode": "94115",
        "region": "California",
        "region_a": "CA",
        "region_gid": "whosonfirst:region:85688637",
        "source": "openaddresses",
        "source_id": "us/ca/san_francisco:e8cd038c05c513c8",
        "street": "Steiner St",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;
